[gd_scene load_steps=5 format=3 uid="uid://c3j8x9y2k4m6n8"]

[ext_resource type="Script" uid="uid://djh5glqo4esvf" path="res://games/infinite_jump/main.gd" id="1_main"]
[ext_resource type="Script" uid="uid://dlh804l1ibnho" path="res://games/infinite_jump/ground_visual.gd" id="2_ground_visual"]
[ext_resource type="Script" uid="uid://b4kncetlkgd4i" path="res://games/infinite_jump/player_sprite.gd" id="3_player_sprite"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(640, 120)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2"]
size = Vector2(32, 40)

[node name="InfiniteJump" type="Node2D"]
script = ExtResource("1_main")

[node name="Background" type="ColorRect" parent="."]
offset_right = 640.0
offset_bottom = 640.0
color = Color(0.360784, 0.580392, 0.988235, 1)

[node name="Ground" type="StaticBody2D" parent="."]
position = Vector2(320, 580)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
shape = SubResource("RectangleShape2D_1")

[node name="Visual" type="Node2D" parent="Ground"]
script = ExtResource("2_ground_visual")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(100, 560)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(0, -20)
shape = SubResource("RectangleShape2D_2")

[node name="Sprite" type="Node2D" parent="Player"]
script = ExtResource("3_player_sprite")

[node name="ObstacleContainer" type="Node2D" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
